<resources>
    <string name="app_name">XMemo</string>
    <string name="sign_up_here">SignUp Here</string>

    <!--UserHomeActivity-->
    <string name="navigation_gallery">Gallery</string>
    <string name="navigation_contact">Contacts</string>
    <string name="navigation_settings">Settings</string>
    <string name="check_internet_connection">Please check internet service</string>

    <!--Privacy Policy-->
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_para">Your privacy is important to us. It is XMemo\'s policy to respect your privacy regarding any information we may collect while operating our Application. Accordingly, we have developed this privacy policy in order for you to understand how we collect, use, communicate, disclose and otherwise make use of personal information. We have outlined our privacy policy below.</string>

    <string name="pp_point1">• We will collect personal information by lawful and fair means and, where appropriate, with the knowledge or consent of the individual concerned.</string>
    <string name="pp_point2">• Before or at the time of collecting personal information, we will identify the purposes for which information is being collected.</string>
    <string name="pp_point3">• We will collect and use personal information solely for fulfilling those purposes specified by us and for other ancillary purposes, unless we obtain the consent of the individual concerned or as required by law.</string>
    <string name="pp_point4">• Personal data should be relevant to the purposes for which it is to be used, and, to the extent necessary for those purposes, should be accurate, complete, and up-to-date.</string>
    <string name="pp_point5">• We will protect personal information by using reasonable security safeguards against loss or theft, as well as unauthorized access, disclosure, copying, use or modification.</string>
    <string name="pp_point6">• We will make readily available to customers information about our policies and practices relating to the management of personal information.</string>
    <string name="pp_point7">• We will only retain personal information for as long as necessary for the fulfilment of those purposes.</string>

    <string name="privacy_policy_para2">We are committed to conducting our business in accordance with these principles in order to ensure that the confidentiality of personal information is protected and maintained. XMemo may change this privacy policy from time to time at XMemo\'s sole discretion.</string>


</resources>
