<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.xmemo.xmemo_image.activity.PrivacyPolicyActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_centerVertical="true"
                android:id="@+id/back_arrow_privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/white_back_arrow_icon"/>

            <TextView
                android:layout_centerHorizontal="true"
                android:id="@+id/static_privacy_policy"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="Privacy Policy"/>
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <TextView
                android:fontFamily="serif"
                android:textStyle="bold"
                android:textColor="@color/black_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/privacy_policy"/>

            <TextView
                android:layout_marginTop="5dp"
                android:textColor="@color/black_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/privacy_policy_para"/>

            <TextView
                android:layout_marginTop="10dp"
                android:textColor="@color/black_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pp_point1"/>

            <TextView
                android:layout_marginTop="10dp"
                android:textColor="@color/black_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pp_point2"/>

            <TextView
                android:layout_marginTop="10dp"
                android:textColor="@color/black_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pp_point3"/>

            <TextView
                android:layout_marginTop="10dp"
                android:textColor="@color/black_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pp_point4"/>

            <TextView
                android:layout_marginTop="10dp"
                android:textColor="@color/black_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pp_point5"/>

            <TextView
                android:layout_marginTop="10dp"
                android:textColor="@color/black_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pp_point6"/>

            <TextView
                android:layout_marginTop="10dp"
                android:textColor="@color/black_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/pp_point7"/>

            <TextView
                android:layout_marginTop="5dp"
                android:textColor="@color/black_txt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/privacy_policy_para2"
                android:layout_marginBottom="50dp"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
